--- a/index.html
+++ b/index.html
@@ -22,17 +22,18 @@
       <div class="input-wrapper padding">
         <p>Enter the bill amount and tip percentage to calculate the total</p>
         <div class="bill-amount padding">
-          <label for="bill-amount">Bill Amount:</label>
-          <input type="number" />
+          <label for="bill">Bill Amount:</label>
+          <input type="number" id="bill" />
         </div>
         <div class="tip-amount padding">
-          <label for="tip-percentage">Tip Percentage:</label>
-          <input type="number" />
+          <label for="tip">Tip Percentage:</label>
+          <input type="number" id="tip" />
         </div>
-        <button class="button padding">Calculate</button>
+        <button class="calculate padding" id="calculate">Calculate</button>
       </div>
       <div class="total-wrapper padding">
-        <p>Total:<span>$000.00</span></p>
+        <label for="total">Total:</label>
+        <span id="total">$</span>
       </div>
     </div>
 
